--- a/src/app/pages/visit/visit.component.html
+++ b/src/app/pages/visit/visit.component.html
@@ -1,1 +1,79 @@
-<p>visit works!</p>
+<div class="card">
+    <p-stepper [value]="1" class="basis-[50rem]">
+        <p-step-list>
+            <p-step [value]="1">Scan QR</p-step>
+            <p-step [value]="2">Visit details</p-step>
+            <p-step [value]="3">Tasks</p-step>
+        </p-step-list>
+        <p-step-panels>
+            <p-step-panel [value]="1">
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
+                            Content I
+                        </div>
+                        <div class="flex pt-6 justify-end">
+                            <p-button label="Next" icon="pi pi-arrow-right" iconPos="right"
+                                (onClick)="activateCallback(2)" />
+                        </div>
+                    </div>
+                </ng-template>
+            </p-step-panel>
+
+            <p-step-panel [value]="2">
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
+                            Content II
+                        </div>
+                    </div>
+                    <div class="flex pt-6 justify-between">
+                        <p-button label="Back" severity="secondary" icon="pi pi-arrow-left"
+                            (onClick)="activateCallback(1)" />
+                        <p-button label="Next" icon="pi pi-arrow-right" iconPos="right"
+                            (onClick)="activateCallback(3)" />
+                    </div>
+                </ng-template>
+            </p-step-panel>
+
+            <p-step-panel [value]="3">
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
+                            Content III
+                        </div>
+                    </div>
+                    <div class="flex pt-6 justify-start">
+                        <p-button label="Back" icon="pi pi-arrow-left" iconPos="right"
+                            (onClick)="activateCallback(2)" />
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-panels>
+    </p-stepper>
+</div>
+<div class="flex flex-col md:flex-row gap-8">
+    <div class="md:w-1/2">
+        <div class="card flex flex-col gap-4">
+            <div class="font-semibold text-xl">Patient & Visit Information</div>
+            <div class="text-white/70 border-2 min-h-28 p-4 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-col flex justify-center items-center font-medium">
+                <i class="pi pi-qrcode !text-[25px] mb-2"> </i>
+                <p>Prêt à scanner</p>
+                <p class="text-sm">Utilisez le bouton "Scanner QR".</p>
+            </div>
+        </div>
+    </div>
+    <div class="md:w-1/2">
+        <div class="card flex flex-col gap-4">
+            <div class="font-semibold text-xl">Visit history</div>
+            <div class="text-white/70 border-2 min-h-28 p-4 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-col flex justify-center items-center font-medium">
+                <i class="pi pi-qrcode !text-[25px] mb-2"> </i>
+                <p>Prêt à scanner</p>
+                <p class="text-sm">Utilisez le bouton "Scanner QR".</p>
+            </div>
+        </div>
+    </div>
+</div>
