--- a/src/app/pages/visit/visit.component.html
+++ b/src/app/pages/visit/visit.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <p-stepper [value]="1" class="basis-[50rem]">
+    <p-stepper [value]="activeStep" class="basis-[50rem]">
         <p-step-list>
             <p-step [value]="1">Scan QR</p-step>
             <p-step [value]="2">Visit details</p-step>
@@ -8,11 +8,37 @@
         <p-step-panels>
             <p-step-panel [value]="1">
                 <ng-template #content let-activateCallback="activateCallback">
-                    <div class="flex flex-col h-48">
-                        <div
-                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
-                            Content I
+                    <div class="flex flex-col min-h-48">
+                        <div *ngIf="!qrResultString"
+                            class="p-4 flex-col border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
+                            <div class="p-fluid grid mb-4">
+                                <div class="field col-12 md:col-4">
+                                    <label for="cameraSelect" class="mr-2">Choose Camera</label>
+                                    <p-dropdown [options]="deviceOptions" [(ngModel)]="selectedDevice"
+                                        optionLabel="label" placeholder="Select camera"
+                                        (onChange)="onDeviceSelect($event.value)">
+                                    </p-dropdown>
+                                </div>
+                            </div>
+
+                            <zxing-scanner #scanner [device]="selectedDevice?.value" [formats]="allowedFormats" [torch]="false"
+                                (scanSuccess)="onScanSuccess($event)" (scanError)="onScanError($event)" class="zxing-scanner bg-slate-500 dark:bg-slate-200 rounded-xl min-h-28 max-w-96">
+                            </zxing-scanner>
+
+                            <p-message *ngIf="!deviceOptions?.length && !qrResultString" class="mt-4" severity="info" icon="pi pi-spin pi-spinner">Recherche Camera...</p-message>
+                            <p-message *ngIf="selectedDevice?.value && !qrResultString" class="mt-4" severity="info" icon="pi pi-info-circle">Caméra prête. Scannez le code.</p-message>
+
                         </div>
+                        <div *ngIf="qrResultString"
+                            class="p-8 flex-col border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
+                            <p-message *ngIf="qrResultString" severity="success" icon="pi pi-check">
+                                Patient {{ qrResultString }} trouvé. 
+                                <span *ngIf="loadingPatient">Chargement…</span>
+                            </p-message>
+
+                            <i *ngIf="loadingPatient" class="mt-6 pi pi-spin pi-spinner !text-[48px] dark:text-green-500 text-green-600"></i>
+                        </div>
+                        
                         <div class="flex pt-6 justify-end">
                             <p-button label="Next" icon="pi pi-arrow-right" iconPos="right"
                                 (onClick)="activateCallback(2)" />
@@ -59,20 +85,87 @@
     <div class="md:w-1/2">
         <div class="card flex flex-col gap-4">
             <div class="font-semibold text-xl">Patient & Visit Information</div>
-            <div class="text-white/70 border-2 min-h-28 p-4 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-col flex justify-center items-center font-medium">
+            <div *ngIf="!qrResultString"
+                class="dark:text-white/70 text-black/70 border-2 min-h-28 p-4 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-col flex justify-center items-center font-medium">
                 <i class="pi pi-qrcode !text-[25px] mb-2"> </i>
                 <p>Prêt à scanner</p>
-                <p class="text-sm">Utilisez le bouton "Scanner QR".</p>
+                <p class="text-sm">Scanner votre QR Code.</p>
+            </div>
+
+            <div *ngIf="qrResultString && loadingPatient"
+                class="dark:text-white/70 text-black/70 border-2 min-h-28 p-4 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-col flex justify-center items-center font-medium">
+                <i class="my-4 pi pi-spin pi-spinner !text-[48px]"></i>
+            </div>
+
+            <div *ngIf="currentPatient"
+                class="">
+                <div class="flex">
+                    <span class="w-1/3">IPP</span>
+                    <p class="w-2/3">{{currentPatient.ipp}}</p>
+                </div>
+                <div class="flex">
+                    <span class="w-1/3">CIN</span>
+                    <p class="w-2/3">{{currentPatient.cin}}</p>
+                </div>
+                <div class="flex">
+                    <span class="w-1/3">Fullname</span>
+                    <p class="w-2/3">{{currentPatient.firstName}} {{currentPatient.lastName}}</p>
+                </div>
+                <div class="flex">
+                    <span class="w-1/3">Phone number</span>
+                    <p class="w-2/3">{{currentPatient.phoneNumber}}</p>
+                </div>
+                <div class="flex">
+                    <span class="w-1/3">Address</span>
+                    <p class="w-2/3">{{currentPatient.address}}, {{currentPatient.city}}</p>
+                </div>
+                <div class="flex">
+                    <span class="w-1/3">Date of birth</span>
+                    <p class="w-2/3">{{currentPatient.dateOfBirth | date}}</p>
+                </div>
+                <div class="flex">
+                    <span class="w-1/3">Gender</span>
+                    <p class="w-2/3">{{currentPatient.gender}}</p>
+                </div>
+                <div class="flex">
+                    <span class="w-1/3">Insurance</span>
+                    <p class="w-2/3">{{currentPatient.hasInsurance ? currentPatient.insuranceName : '-'}}</p>
+                </div>
+                <div class="flex">
+                    <span class="w-1/3">Referring doctor</span>
+                    <p class="w-2/3">{{currentPatient.referringDoctor}}</p>
+                </div>
+                <div class="flex">
+                    <span class="w-1/3">Companion</span>
+                    <p class="w-2/3">{{currentPatient.companionGuid}}</p>
+                </div>
+                <div class="flex">
+                    <span class="w-1/3">QR Code</span>
+                    <p class="w-2/3">
+                        <img class="max-h-28" src="{{currentPatient.qrCode}}" alt="">
+                    </p>
+                </div>
             </div>
         </div>
     </div>
     <div class="md:w-1/2">
         <div class="card flex flex-col gap-4">
             <div class="font-semibold text-xl">Visit history</div>
-            <div class="text-white/70 border-2 min-h-28 p-4 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-col flex justify-center items-center font-medium">
+            <div *ngIf="!qrResultString"
+                class="dark:text-white/70 text-black/70 border-2 min-h-28 p-4 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-col flex justify-center items-center font-medium">
                 <i class="pi pi-qrcode !text-[25px] mb-2"> </i>
                 <p>Prêt à scanner</p>
-                <p class="text-sm">Utilisez le bouton "Scanner QR".</p>
+                <p class="text-sm">Scanner votre QR Code.</p>
+            </div>
+
+            <div *ngIf="qrResultString && loadingPatient"
+                class="dark:text-white/70 text-black/70 border-2 min-h-28 p-4 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-col flex justify-center items-center font-medium">
+                <i class="my-4 pi pi-spin pi-spinner !text-[48px]"></i>
+            </div>
+
+            <div *ngIf="currentPatient"
+                class="dark:text-white/70 text-black/70 border-2 min-h-28 p-4 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-col flex justify-center items-center font-medium">
+                No history found
             </div>
         </div>
     </div>
